# StockMonitor_little-ptoject

./: .gitignore  CMakeLists.txt  main.cpp
include/: Display.h  Observer.h  Stock.h
